stabilize cli tests + refactored cli to remove classpathagent